--- a/src/app/impact/shakemap-summary/shakemap-summary.component.html
+++ b/src/app/impact/shakemap-summary/shakemap-summary.component.html
@@ -16,7 +16,7 @@
         </ng-container>
         <a [routerLink]="['/', event?.id, 'shakemap']"
             [queryParams]="{ source: shakemap?.source, code: shakemap?.code }">
-          {{ shakemap?.properties?.eventsource.toUpperCase() }}
+          {{ shakemap?.properties?.eventsource?.toUpperCase() }}
         </a>
       </mat-cell>
     </ng-container>
