executive > dyfi-response-submit-pin: coding standards

--- a/src/app/executive/dyfi-response-submit-pin/dyfi-response-submit-pin.component.html
+++ b/src/app/executive/dyfi-response-submit-pin/dyfi-response-submit-pin.component.html
@@ -1,4 +1,4 @@
-<basic-pin *ngIf="product | dyfiCounter: 6 as responses"
+<basic-pin *ngIf="product | dyfiCounter:6 as responses"
   [link]="link"
   [product]="product"
   [title]="title"
@@ -16,7 +16,7 @@
   </figure>
 
   <p>
-    Contribute to citizen science. Please <a href="#tellus">tell us</a>
+    Contribute to citizen science. Please <a [href]="link">tell us</a>
     about your experience.
   </p>
 
