--- a/src/app/shared/coordinates/coordinates.component.html
+++ b/src/app/shared/coordinates/coordinates.component.html
@@ -1,4 +1,4 @@
 <span class="latitude"
-  [innerHTML]="formatter.latitude(latitude)"></span>
+  [innerHTML]="formatter?.latitude(latitude)"></span>
 <span class="longitude"
-  [innerHTML]="formatter.longitude(longitude)"></span>
+  [innerHTML]="formatter?.longitude(longitude)"></span>
