--- a/src/app/shared/map/map.component.html
+++ b/src/app/shared/map/map.component.html
@@ -1,4 +1,4 @@
 <div #mapWrapper
-    [class.noninteractive]="interactive === false"
-    (mousemove)="$event.stopPropagation">
+     [class.noninteractive]="interactive === false"
+     (mousemove)="$event?.stopPropagation">
 </div>
