--- a/src/app/shared/fe-region/fe-region.component.html
+++ b/src/app/shared/fe-region/fe-region.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="fe && fe.properties; else notReady">
+<ng-container *ngIf="fe && fe?.properties; else notReady">
   {{ fe.properties.name }} ({{ fe.properties.number }})
 </ng-container>
 
