standardized event-page

--- a/src/app/event-page/event-page/event-page.component.html
+++ b/src/app/event-page/event-page/event-page.component.html
@@ -1,12 +1,15 @@
-<ng-container *ngIf="this.eventService.event$ | async; else noEvent; let event">
+<ng-container *ngIf="this?.eventService?.event$ | async;
+              else noEvent; let event">
   <app-hazdev-template>
     <event-page-header [event]="event"></event-page-header>
 
     <mat-nav-list templateSideNavigation>
-      <event-page-navigation class="site-sectionnav" [event]="event"></event-page-navigation>
+      <event-page-navigation
+        class="site-sectionnav"
+        [event]="event"></event-page-navigation>
     </mat-nav-list>
 
-    <ng-container *ngIf="!event.deleted; else deletedEvent">
+    <ng-container *ngIf="!event?.deleted; else deletedEvent">
       <router-outlet></router-outlet>
     </ng-container>
 
@@ -16,7 +19,7 @@
       </p>
 
       <shared-text-product
-        *ngFor="let product of event.getProducts('deleted-text')"
+        *ngFor="let product of event?.getProducts('deleted-text')"
         [product]="product">
       </shared-text-product>
     </ng-template>
@@ -24,7 +27,7 @@
 
     <event-page-footer
       [event]="event"
-      [contributors]="this.contributorService.contributors$ | async"
+      [contributors]="this?.contributorService?.contributors$ | async"
     ></event-page-footer>
   </app-hazdev-template>
 </ng-container>
