--- a/src/app/event-page/header/header.component.scss
+++ b/src/app/event-page/header/header.component.scss
@@ -3,24 +3,19 @@ h1 {
 }
 
 ul {
-  list-style:  none;
+  list-style: none;
   margin: 0;
-  padding:  0;
+  padding: 0;
 }
 
 li {
   display: inline-block;
-  padding: 0 1em;
+  padding-right: 1em;
+  margin-right: 1em;
+  border-right:  1px solid #999;
+
+  &:last-child {
+    border: none;
+  }
 }
 
-li:first-child {
-  padding-left: 0;
-}
-
-li:last-child {
-  padding-right: 0;
-}
-
-li + li {
-  border-left:  1px solid #999;
-}
