--- a/src/app/shakemap/intensity/intensity.component.html
+++ b/src/app/shakemap/intensity/intensity.component.html
@@ -18,17 +18,16 @@
       </shared-map>
     </a>
 
-    <img
-        class="legend"
+    <img class="legend"
         src="./assets/shakemap-intensity-legend.png"
-        alt="ShakeMap intensity legend">
+        alt="ShakeMap intensity legend" />
   </ng-container>
 
   <ng-template #noOverlay>
     <img
         *ngIf="shakemap?.contents['download/intensity.jpg']; else noImage"
         src="{{ shakemap?.contents['download/intensity.jpg'].url }}"
-        alt="ShakeMap intensity image">
+        alt="ShakeMap intensity image" />
 
     <ng-template #noImage>
       <h1>No intensity available for this event</h1>
