--- a/src/app/origin/magnitude/magnitude.component.html
+++ b/src/app/origin/magnitude/magnitude.component.html
@@ -1,6 +1,6 @@
 <h3>Magnitudes</h3>
 
-<div *ngFor="let magnitude of magnitudes"
+<div *ngFor="let magnitude of magnitudes;trackBy: trackByIndex"
     [attr.data-magnitudeID]="magnitude.magnitudePublicID">
 
   <h4>
