--- a/src/app/shakemap/station-list/station-list.component.html
+++ b/src/app/shakemap/station-list/station-list.component.html
@@ -17,7 +17,7 @@
 </div>
 
 <ng-container *ngFor="let station of stations |
-    sharedOrderBy:['properties', sortBy.name]:descending">
+    sharedOrderBy:['properties', sortBy.name]:descending;trackBy: trackByIndex">
   <div class="station">
     <shared-station [station]="station"></shared-station>
   </div>
