--- a/src/app/executive/dyfi-response-submit-pin/dyfi-response-submit-pin.component.html
+++ b/src/app/executive/dyfi-response-submit-pin/dyfi-response-submit-pin.component.html
@@ -6,7 +6,7 @@
 
   <figure>
     <div class="dyfi-responses-badge">
-      <div *ngFor="let response of responses"
+      <div *ngFor="let response of responses;trackBy: trackByResponse"
            class="responses-digit"
            [class.empty-digit]="response.leadingZero">
         {{ response.value }}
