--- a/src/app/oaf/model/model.component.html
+++ b/src/app/oaf/model/model.component.html
@@ -3,7 +3,8 @@
 
   <h4>Parameters</h4>
   <dl class="description-table">
-    <ng-container *ngFor="let key of model.parameters.keys">
+    <ng-container *ngFor="let key of model.parameters.keys;
+        trackBy: trackByIndex">
       <dt>{{ key }}</dt>
       <dd>{{ model.parameters.values[key] }}</dd>
     </ng-container>
