add prefered tick behavior for i vs. d

--- a/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
+++ b/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
@@ -21,6 +21,9 @@
         [showXAxisLabel]="showXAxisLabel"
         [showYAxisLabel]="showYAxisLabel"
         [xAxisLabel]="xAxisLabel"
+        [xAxisTicks]="xAxisTicks"
+        [xScaleMax]="xScaleMax"
+        [xScaleMin]="xScaleMin"
         [yAxisLabel]="yAxisLabel">
     </bubble-line-chart-component>
   </div>
