--- a/src/app/shared/ngx-charts/bubble-line-chart/bubble-line-chart/bubble-line-chart.component.html
+++ b/src/app/shared/ngx-charts/bubble-line-chart/bubble-line-chart/bubble-line-chart.component.html
@@ -54,6 +54,7 @@
         [labelText]="xAxisLabel"
         [showGridLines]="showGridLines"
         [tickFormatting]="xAxisTickFormatting"
+        [ticks]="xAxisTicks"
         (dimensionsChanged)="updateXAxisHeight($event)">
     </svg:g>
     <svg:g ngx-charts-y-axis
