allow up to 24 hours in resp vs. time

--- a/src/app/dyfi/responses-vs-time/responses-vs-time.component.html
+++ b/src/app/dyfi/responses-vs-time/responses-vs-time.component.html
@@ -13,6 +13,7 @@
         [showXAxisLabel]="showXAxisLabel"
         [showYAxisLabel]="showYAxisLabel"
         [xAxisLabel]="xAxisLabel"
+        [xScaleMax] = "xScaleMax"
         [xAxisTicks]="xAxisTicks"
         [yAxisLabel]="yAxisLabel"
         [autoScale]="autoScale">
