added event boolean to tellus form to either show or not show the time input on the form

--- a/src/app/tell-us/form/form.component.html
+++ b/src/app/tell-us/form/form.component.html
@@ -32,7 +32,7 @@
     </tell-us-fieldset>
 
     <!-- time -->
-    <ng-container *ngIf="!answers?.eventId">
+    <ng-container *ngIf="!answers?.eventId && !hasEvent">
       <tell-us-fieldset [legend]="language?.eventTime?.ciim_time?.label">
         <mat-form-field>
           <input matInput
