Reorganize metadata, expand first, left align arrows

--- a/src/app/shakemap/metadata/processing/processing.component.html
+++ b/src/app/shakemap/metadata/processing/processing.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="smProcessing">
-  <mat-expansion-panel>
+  <mat-expansion-panel [expanded]="true">
     <mat-expansion-panel-header>
       <mat-panel-title>
         Ground Motion/Intensity Information
