--- a/src/app/shakemap/station-list/station-list.component.html
+++ b/src/app/shakemap/station-list/station-list.component.html
@@ -1,4 +1,5 @@
-<ng-container *ngFor="let station of stations">
+<ng-container *ngFor="let station of stations |
+    sharedOrderBy:['properties', sort.name]:sort.desc">
   <div class="station">
     <shared-station [station]="station"></shared-station>
   </div>
