--- a/src/app/shakemap/station-list/station-list.component.scss
+++ b/src/app/shakemap/station-list/station-list.component.scss
@@ -1,3 +1,16 @@
+mat-icon {
+  cursor: pointer;
+}
+
+mat-icon, mat-menu {
+  display: inline-block;
+}
+
+.sort {
+  display: flex;
+  align-items: center;
+}
+
 .station {
   padding: 1em 0.5em;
 }
