--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,15 @@ mdc-tab.mdc-tab {
   }
 }
 
+.cdk-overlay-connected-position-bounding-box {
+  position: absolute;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  min-width: 1px;
+  min-height: 1px;
+}
+
 nav.mdc-tab-bar,
 mdc-tab-bar.mdc-tab-bar {
   /* stop tabs from being centered */
