--- a/src/app/origin/detail/detail.component.html
+++ b/src/app/origin/detail/detail.component.html
@@ -80,8 +80,8 @@
         <dt><abbr title="Flin Engdahl">FE</abbr> Region</dt>
         <dd>
           <shared-fe-region
-              [latitude]="props.latitude"
-              [longitude]="props.longitude"></shared-fe-region>
+              [latitude]="props?.latitude"
+              [longitude]="props?.longitude"></shared-fe-region>
         </dd>
 
         <dt>Review Status</dt>
