--- a/src/app/wildcard/wildcard/wildcard.component.html
+++ b/src/app/wildcard/wildcard/wildcard.component.html
@@ -1,32 +1,36 @@
-<h2>Hmm - that webpage isn't there. (404)</h2>
-<p>We may have moved the webpage your'e looking for.
-    Here is what we suggest:</p>
-<div *ngIf="suggestionString">
-  <ul>
-    <li>
-      Were you looking for the
-      <a
-      [routerLink]="suggestionStringUrl">{{ suggestionString }}</a> page?
-    </li>
-  </ul>
+<h2>We're having trouble finding that data.</h2>
+<p>We may have moved the webpage your'e looking for. Here is what we suggest:
+</p>
+<div *ngIf="suggestionString && suggestionStringUrl">
+    <ul>
+        <li>
+            Were you looking for the
+            <a [routerLink]="suggestionStringUrl">{{ suggestionString }}</a>
+            page?
+        </li>
+    </ul>
 </div>
 <ul>
-  <li><p>Click any of the links on the left sidebar to select a product for this
-      event.</p></li>
-  <li><p>Check the spelling of the URL, if you typed it.</p></li>
-  <li><p>If you clicked on a link from another website, they probably have a
-      broken link, so...</p></li>
-  <li><p>Try to navigate to the content from the website
-      <a href="https://earthquake.usgs.gov/index.php">Homepage</a>.</p></li>
-  <li><p><a href="http://search.usa.gov/search?utf8=%E2%9C%93&affiliate=usgs&
-      sitelimit=http%3A%2F%2Fearthquake.usgs.gov">
-      <strong>Search</strong></a> the website.</p></li>
-  <li><p>If you still can't find what you're looking for,
-      <strong><a href="mailto:lisa@usgs.gov?subject=EHP%20Website%20Email:%20&cc
+    <li>
+        <p>Click any of the links on the left sidebar to select a product for this event.
+        </p>
+    </li>
+    <li>
+        <p>Check the spelling of the URL, if you typed it.</p>
+    </li>
+    <li>
+        <p>If you clicked on a link from another website, they probably have a broken link, please considering contacting
+            them to let them know.</p>
+    </li>
+    <li>
+        <p>Try to navigate to the content from the website
+            <a href="https://earthquake.usgs.gov/index.php">Homepage</a>.</p>
+    </li>
+    <li>
+        <p>If you still can't find what you're looking for,
+            <a href="mailto:lisa@usgs.gov?subject=EHP%20Website%20Email:%20&cc
         =lkpratt@usgs.gov&body=Please add your specific subject after the
-        pre-entered Subject above. Thank you!">Contact Us</a></strong> for
-        assistance. Also, tell us if you clicked on the link from another
-        website.</p></li>
+        pre-entered Subject above. Thank you!">Contact Us</a> for assistance, and please let us know how you
+            arrived at this page.</p>
+    </li>
 </ul>
-
-
