Turn off tooltips for line chart
To allow static chart axes without weird behavior

--- a/src/app/shared/ngx-charts/bubble-line-chart/bubble-line-chart/bubble-line-chart.component.html
+++ b/src/app/shared/ngx-charts/bubble-line-chart/bubble-line-chart/bubble-line-chart.component.html
@@ -26,7 +26,7 @@
         [xSet]="xSet"
         [xScale]="xScale"
         [yScale]="yScale"
-        [results]="combinedSeries"
+        [results]="null"
         [colors]="colors"
         [tooltipDisabled]="tooltipDisabled"
         (hover)="updateHoveredVertical($event)" />
