Add switch for both bubble and line tooltips
Allows responses vs. time chart to still use tooltips

--- a/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
+++ b/src/app/dyfi/intensity-vs-distance/intensity-vs-distance.component.html
@@ -8,6 +8,7 @@
         [results]="allResults"
         [animations]="animations"
         [lineChart]="lineSeries"
+        [lineChartTooltip]="false"
         [bubbleChart]="bubbleSeries"
         [tooltipDisabled]="false"
         [gradient]="gradient"
